; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/riched20/extr_richole.c_ME_DeleteReObject.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/riched20/extr_richole.c_ME_DeleteReObject.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.re_object = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ME_DeleteReObject(%struct.re_object* %0) #0 {
  %2 = alloca %struct.re_object*, align 8
  store %struct.re_object* %0, %struct.re_object** %2, align 8
  %3 = load %struct.re_object*, %struct.re_object** %2, align 8
  %4 = getelementptr inbounds %struct.re_object, %struct.re_object* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 2
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load %struct.re_object*, %struct.re_object** %2, align 8
  %10 = getelementptr inbounds %struct.re_object, %struct.re_object* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 2
  %12 = load i64, i64* %11, align 8
  %13 = call i32 @IOleObject_Release(i64 %12)
  br label %14

14:                                               ; preds = %8, %1
  %15 = load %struct.re_object*, %struct.re_object** %2, align 8
  %16 = getelementptr inbounds %struct.re_object, %struct.re_object* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %26

20:                                               ; preds = %14
  %21 = load %struct.re_object*, %struct.re_object** %2, align 8
  %22 = getelementptr inbounds %struct.re_object, %struct.re_object* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = call i32 @IStorage_Release(i64 %24)
  br label %26

26:                                               ; preds = %20, %14
  %27 = load %struct.re_object*, %struct.re_object** %2, align 8
  %28 = getelementptr inbounds %struct.re_object, %struct.re_object* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %38

32:                                               ; preds = %26
  %33 = load %struct.re_object*, %struct.re_object** %2, align 8
  %34 = getelementptr inbounds %struct.re_object, %struct.re_object* %33, i32 0, i32 0
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  %37 = call i32 @IOleClientSite_Release(i64 %36)
  br label %38

38:                                               ; preds = %32, %26
  %39 = load %struct.re_object*, %struct.re_object** %2, align 8
  %40 = call i32 @heap_free(%struct.re_object* %39)
  ret void
}

declare dso_local i32 @IOleObject_Release(i64) #1

declare dso_local i32 @IStorage_Release(i64) #1

declare dso_local i32 @IOleClientSite_Release(i64) #1

declare dso_local i32 @heap_free(%struct.re_object*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
